# backend/api/go/main.go
@@ -1,70 +1,0 @@
-package main
-
-import (
-	"encoding/json"
-	"errors"
-	"fmt"
-	"github.com/aws/aws-lambda-go/events"
-	"github.com/aws/aws-lambda-go/lambda"
-	"io/ioutil"
-	"net/http"
-)
-
-type helloWorldResponse struct {
-	Message  string `json:"message"`
-	Location string `json:"location"`
-}
-
-var (
-	// DefaultHTTPGetAddress Default Address
-	DefaultHTTPGetAddress = "https://checkip.amazonaws.com"
-
-	// ErrNoIP No IP found in response
-	ErrNoIP = errors.New("No IP in HTTP response")
-
-	// ErrNon200Response non 200 status code in response
-	ErrNon200Response = errors.New("Non 200 Response found")
-)
-
-func handler(request events.APIGatewayProxyRequest) (events.APIGatewayProxyResponse, error) {
-	resp, err := http.Get(DefaultHTTPGetAddress)
-	if err != nil {
-		return events.APIGatewayProxyResponse{}, err
-	}
-
-	if resp.StatusCode != 200 {
-		return events.APIGatewayProxyResponse{}, ErrNon200Response
-	}
-
-	ip, err := ioutil.ReadAll(resp.Body)
-	if err != nil {
-		return events.APIGatewayProxyResponse{}, err
-	}
-
-	if len(ip) == 0 {
-		return events.APIGatewayProxyResponse{}, ErrNoIP
-	}
-
-	helloWorld := helloWorldResponse{Message: "Hello World", Location: string(ip)}
-	body, err := json.Marshal(helloWorld)
-
-	if err != nil {
-		fmt.Println("error:", err)
-	}
-	return events.APIGatewayProxyResponse{
-		Body:       string(body),
-		StatusCode: 200,
-		Headers: map[string]string{
-			"X-Requested-With":             "*",
-			"Content-Type":                 "application/json",
-			"Access-Control-Allow-Headers": "Content-Type,X-Amz-Date,Authorization,X-Api-Key,x-requested-with",
-			"Access-Control-Allow-Origin":  "*",
-			"Access-Control-Allow-Methods": "POST,GET,OPTIONS",
-			"Cache-Control":                "no-cache",
-		},
-	}, nil
-}
-
-func main() {
-	lambda.Start(handler)
-}
