# backend/api/swagger.yaml
@@ -67,34 +67,6 @@ paths:
           application/json: "{\n  \"statusCode\" : 200\n}\n"
         passthroughBehavior: "when_no_match"
         type: "mock"
-
-  /hello-world-go: 
-    post:
-      x-amazon-apigateway-integration:
-        credentials:
-          Ref: RoleArn
-        type: aws_proxy
-        httpMethod: POST
-        uri: 
-          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${HelloWorldGoFunction.Arn}/invocations
-        responses:
-          default:
-            statusCode: '200' 
-            responseParameters:
-              method.response.header.Access-Control-Allow-Headers : "'Content-Type,X-Amz-Date,Authorization,X-Api-Key'"
-              method.response.header.Access-Control-Allow-Methods : "'*'"
-              method.response.header.Access-Control-Allow-Origin : "'*'"
-      responses:
-        200:
-          description: Default response for CORS method
-          headers:
-            Access-Control-Allow-Headers:
-              type: "string"
-            Access-Control-Allow-Methods:
-              type: "string"
-            Access-Control-Allow-Origin:
-              type: "string"
-          content: {}
 x-amazon-apigateway-gateway-responses:
   DEFAULT_4XX:
     responseParameters:
